[package]
name = "rust-libp2p-ping-poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.25.0", features = ["rt", "macros", "sync", "time"] }
env_logger = "0.10.0"
async-trait = "0.1.64"
tokio-stream = "0.1.11"
rand = "0.8.5"
void = "1.0.2"
smallvec = "1.10.0"
tokio-util = "0.7.7"

[dependencies.libp2p]
version = "0.50.0"
features = [
    # "async-std",
    # "autonat",
    # "dcutr",
    # "deflate",
    "dns",
    # "ecdsa",
    # "floodsub",
    # "gossipsub",
    # "identify",
    # "kad",
    # "mdns",
    # "metrics",
    "mplex",
    "noise",
    "ping",
    # "plaintext",
    # "pnet",
    # "quic",
    "macros",
    # "relay",
    # "rendezvous",
    "request-response",
    # "rsa",
    # "secp256k1",
    "serde",
    "tcp",
    # "tls",
    "tokio",
    # "uds",
    # "wasm-bindgen",
    # "wasm-ext",
    # "wasm-ext-websocket",
    # "webrtc",
    # "websocket",
    "yamux",
]
